# AgentHub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: base.py  registry.py
backend/app/agents/cognee_agent/: builder.py
backend/app/agents/graphrag_neo4j/: builder.py  graph_store.py  ingest.py
backend/app/agents/leann_agent/: builder.py
backend/app/agents/rag_faiss/: builder.py  ingest.py  retriever.py
backend/app/api/: routes_agents.py  routes_chat.py  routes_prompts.py  routes_sessions.py
backend/app/graph/: state.py  utils.py
backend/app/persistence/: db.py  models.py  seed.py
backend/app/persistence/assets/: template_prompts.json
backend/app/services/: history_service.py  llm_router.py
docs/: ai-agent-implementation.md
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/components/: layout.tsx  sidebar.tsx  theme-toggle.tsx
frontend/src/pages/: Home.tsx  SystemPrompts.tsx
tests/: test_history_service.py
