[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-agent-lab"
version = "0.1.0"
description = "AI Agent Experiment Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn[standard]==0.23.2",
    "SQLAlchemy==2.0.23",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "langchain==0.0.353",
    "neo4j==5.14.1",
    "gradio==4.36.1",
    "huggingface-hub[cli]==0.23.5",
    "requests==2.31.0",
    "pytest==7.4.3",
]

[tool.uv]
cache-keys = ["pyproject.toml"]
